--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="author" content="Héctor Aguilera Gavica">
     <meta name="description" content="Antropoceno: La era del dominio humano en la Tierra">
-    <meta name="keywords" content="antropoceno, holoceno, gran aceleración, imapctos humanos, calentamiento global, desarrollo sostenible">
+    <meta name="keywords"
+        content="antropoceno, holoceno, gran aceleración, imapctos humanos, calentamiento global, desarrollo sostenible">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Antropoceno: La era del dominio humano en la Tierra</title>
     <link rel="stylesheet" href="estilos.css">
@@ -15,45 +16,127 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="linea-de-tiempo.html" target="_self">Línea de tiempo</a></li>
-                <li><a href="gran-aceleracion.html" target="_self">Gran aceleración</a></li>
-                <li><a href="impactos-humanos.html" target="_self">Impactos humanos</a></li>
-                <li><a href="desarrollo-sostenible.html" target="_self">Dedarrollo sostenible</a></li>
-                <li><a href="recursos-educativos.html" target="_self">Recursos educativos</a></li>
-            </ul>
+            <div class="top">
+                <div class="logoBox">
+                    <img class="logo" src="/imagenes/iconos/antropoceno-blanco.png">
+                    <div class="logoText">
+                        <p class="bigText">Antropoceneo</p>
+                        <p>La Tierra del Hombre</p>
+                    </div>
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna01.html" target="_self">Línea de tiempo</a>
+                    <img class="topImage" src="/imagenes/iconos/linea-de-tiempo-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna02.html" target="_self">Gran aceleración</a>
+                    <img class="topImage" src="/imagenes/iconos/gran-aceleracion-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna03.html" target="_self">Impactos humanos</a>
+                    <img class="topImage" src="/imagenes/iconos/impactos-humanos-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna04.html" target="_self">Dedarrollo sostenible</a>
+                    <img class="topImage" src="/imagenes/iconos/desarrollo-sostenible-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna05.html" target="_self">Recursos educativos</a>
+                    <img class="topImage" src="/imagenes/iconos/recursos-educativos-blanco.png">
+                </div>
+
+            </div>
         </nav>
     </header>
 
     <section>
-        <article>
-            <h1><strong>¿Qué es el Antropoceno?</strong></h1>
-            <p1>El “Antropoceno” es un término acuñado por Paul Crutzen y Eugene Stoermer en 2000 para denotar el intervalo de tiempo geológico actual, en el que muchas condiciones y procesos en la Tierra se ven profundamente alterados por el impacto humano. Este impacto se ha intensificado significativamente desde el inicio de la industrialización, sacándonos del estado del Sistema Tierra típico de la Época del Holoceno que es posterior a la última glaciación.</p1>
+        <article class="queEs">
+            <div class="articleBox">
+                <h1 class="articleTitle"><strong>¿Qué es el Antropoceno?</strong></h1>
+                <p1 class="articleText">El “Antropoceno” es un término acuñado por Paul Crutzen y Eugene Stoermer en
+                    2000
+                    para denotar el
+                    intervalo de tiempo geológico actual, en el que muchas condiciones y procesos en la Tierra se ven
+                    profundamente alterados por el impacto humano. Este impacto se ha intensificado significativamente
+                    desde
+                    el inicio de la industrialización, sacándonos del estado del Sistema Tierra típico de la Época del
+                    Holoceno que es posterior a la última glaciación.</p1>
+            </div>
         </article>
-        <article>
-            <h1><strong>Línea de tiempo</strong></h1>
-            <p1>Conoce la cronología de los acontecimientos más importantes acerca del desarrollo de la actividad humana con impactos en el medio ambiente.</p1>
-            <h1><strong>Aprende más</strong></h1>
+        <article class="lineaDe">
+            <div class="aprendeBox">
+                <div class="aprendeLeft">
+                    <h1 class="aprendeTitle"><strong>Línea de tiempo</strong></h1>
+                    <p1 class="aprendeText">Conoce la cronología de los acontecimientos más importantes acerca del
+                        desarrollo de la actividad
+                        humana con impactos en el medio ambiente, consideran posibles fechas del inicio para el
+                        Antropoceneo</p1>
+                </div>
+                <div class="aprendeRight">
+                    <img class="aprendeIcon" src="/imagenes/iconos/linea-de-tiempo-blanco.png">
+                    <button type="button" class="boton">Aprende más</button>
+                </div>
+            </div>
         </article>
-        <article>
-            <h1><strong>Gran aceleración</strong></h1>
-            <p1>Descubre dramático aumento continuo y aproximadamente simultáneo en la tasa de crecimiento de la actividad humana en una amplia gama de medidas desde mediados del siglo XX hasta nuestro presente.</p1>
-            <h1><strong>Aprende más</strong></h1>
+        <article class="granAce">
+            <div class="aprendeBox">
+                <div class="aprendeLeft">
+                    <h1 class="aprendeTitle"><strong>Gran aceleración</strong></h1>
+                    <p1 class="aprendeText">Descubre dramático aumento continuo y aproximadamente simultáneo en la tasa
+                        de crecimiento de la
+                        actividad humana en una amplia gama de medidas desde mediados del siglo XX hasta nuestro
+                        presente.</p1>
+                </div>
+                <div class="aprendeRight">
+                    <img class="aprendeIcon" src="/imagenes/iconos/gran-aceleracion-blanco.png">
+                    <button type="button" class="boton">Aprende más</button>
+                </div>
+            </div>
         </article>
-        <article>
-            <h1><strong>Impactos humanos</strong></h1>
-            <p1>Descubre los fenómenos causados en el medio ambiente a escala global provocados por el crecimiento de la población, el consumo excesivo, la sobreexplotación, la contaminación y la deforestación.</p1>
-            <h1><strong>Aprende más</strong></h1>
+        <article class="impactosHum">
+            <div class="aprendeBox">
+                <div class="aprendeLeft">
+                    <h1 class="aprendeTitle"><strong>Impactos humanos</strong></h1>
+                    <p1 class="aprendeText">Descubre los fenómenos causados en el medio ambiente a escala global
+                        provocados por el
+                        crecimiento de la
+                        población, el consumo excesivo, la sobreexplotación, la contaminación y la deforestación.</p1>
+                </div>
+                <div class="aprendeRight">
+                    <img class="aprendeIcon" src="/imagenes/iconos/impactos-humanos-blanco.png">
+                    <button type="button" class="boton">Aprende más</button>
+                </div>
+            </div>
         </article>
-        <article>
-            <h1><strong>Desarrollo sostenible</strong></h1>
-            <p1>Aprende sobre el principio organizador para alcanzar los objetivos de desarrollo humano dentro de la capacidad de los sistemas naturales de proporcionar recursos naturales.</p1>
-            <h1><strong>Aprende más</strong></h1>
+        <article class="desarrolloSos">
+            <div class="aprendeBox">
+                <div class="aprendeLeft">
+                    <h1 class="aprendeTitle"><strong>Desarrollo sostenible</strong></h1>
+                    <p1 class="aprendeText">Aprende sobre el principio organizador para alcanzar los objetivos de
+                        desarrollo humano dentro
+                        de la
+                        capacidad de los sistemas naturales de proporcionar recursos naturales.</p1>
+                </div>
+                <div class="aprendeRight">
+                    <img class="aprendeIcon" src="/imagenes/iconos/desarrollo-sostenible-blanco.png">
+                    <button type="button" class="boton">Aprende más</button>
+                </div>
+            </div>
         </article>
-        <article>
-            <h1><strong>Recursos educativos</strong></h1>
-            <p1>Descubre diversos recursos educativos con sustento científico sobre esta época geológica propuesta por miembros de la comunidad científica.</p1>
-            <h1><strong>Aprende más</strong></h1>
+        <article class="recursosEdu">
+            <div class="aprendeBox">
+                <div class="aprendeLeft">
+                    <h1 class="aprendeTitle"><strong>Recursos educativos</strong></h1>
+                    <p1 class="aprendeText">Descubre diversos recursos educativos con sustento científico sobre esta
+                        época geológica
+                        propuesta por
+                        miembros de la comunidad científica.</p1>
+                </div>
+                <div class="aprendeRight">
+                    <img class="aprendeIcon" src="/imagenes/iconos/recursos-educativos-blanco.png">
+                    <button type="button" class="boton">Aprende más</button>
+                </div>
+            </div>
         </article>
     </section>
 
