--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <p>La Tierra del Hombre</p>
                     </div>
                 </div>
-                <div class="socials">
+                <div class="redes">
                     <div>
                         <p class="botText">Comparte esta página</p>
                     </div>
