--- a/interna05.html
+++ b/interna05.html
@@ -15,51 +15,133 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="linea-de-tiempo.html" target="_self">Línea de tiempo</a></li>
-                <li><a href="gran-aceleracion.html" target="_self">Gran aceleración</a></li>
-                <li><a href="impactos-humanos.html" target="_self">Impactos humanos</a></li>
-                <li><a href="desarrollo-sostenible.html" target="_self">Dedarrollo sostenible</a></li>
-                <li><a href="recursos-educativos.html" target="_self">Recursos educativos</a></li>
-            </ul>
+            <div class="top">
+                <div class="logoBox">
+                    <img class="logo" src="imagenes/iconos/antropoceno-blanco.png">
+                    <div class="logoText">
+                        <p class="bigText">Antropoceno</p>
+                        <p>La Tierra del Hombre</p>
+                    </div>
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna01.html" target="_self">Línea de tiempo</a>
+                    <img class="topImage" src="imagenes/iconos/linea-de-tiempo-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna02.html" target="_self">Gran aceleración</a>
+                    <img class="topImage" src="imagenes/iconos/gran-aceleracion-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna03.html" target="_self">Impactos humanos</a>
+                    <img class="topImage" src="imagenes/iconos/impactos-humanos-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna04.html" target="_self">Dedarrollo sostenible</a>
+                    <img class="topImage" src="imagenes/iconos/desarrollo-sostenible-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna05.html" target="_self">Recursos educativos</a>
+                    <img class="topImage" src="imagenes/iconos/recursos-educativos-blanco.png">
+                </div>
+            </div>
         </nav>
     </header>
 
     <section>
-        <article>
-            <h1><strong>Recursos educativos</strong></h1>
-            <p1>El término “antropoceno” se usa informalmente en contextos científicos, ya que actualmente ni la Comisión Internacional de Estratigrafía (ICS por sus siglas en inglés) ni la Unión Internacional de Ciencias Geológicas han aprobado oficialmente el término como una subdivisión reconocida del tiempo geológico. Sin embargo, el Anthropocene Working Group, subcomisionado por el ICS, votó en mayo de 2019 a favor de presentar una propuesta formal al ICS para 2021, ubicando posibles marcadores estratigráficos a mediados del siglo XX, el comienzo de la Gran aceleración. A continuación diversos recursos educativos sobre el tema con sustento científico.</p1>
+        <article class="queEs">
+            <div class="articleBox">
+                <h1 class="articleTitle"><strong>Recursos educativos</strong></h1>
+                <p1 class="articleText">El término “Antropoceno” se usa informalmente en contextos científicos, ya que actualmente la Comisión Internacional de Estratigrafía (ICS por sus siglas en inglés) no ha aprobado oficialmente el término como una subdivisión del tiempo geológico. El Grupo de Trabajo del Antropoceno, subcomisionado por el ICS, votó en 2019 a favor de presentar una propuesta formal a la misma en 2021, ubicando su inicio a mediados del siglo XX, con el comienzo de la Gran aceleración, y el término es cada vez más aceptado dentro de la comunidad científica. </p1>
+            </div>
         </article>
     </section>
 
-    <section>
+    <section class="texto">
         <article>
-            <h1><strong>The Anthropocene as a Geological Time Unit: A Guide to the Scientific Evidence and Current Debate</strong></h1>
+            <h1><strong>The Anthropocene as a Geological Time Unit</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/the-anthropocene-as-a-geological-time-unit.jpg" alt="Portada: The Anthropocene as a Geological Time Unit.">
+                </figure>
+            </div>
             <p1>Este libro presenta la evidencia para definir el Antropoceno como una época geológica, escrito por el equipo internacional que analiza su posible adición a la escala de tiempo geológico. El cambio ambiental global se coloca dentro del contexto de los procesos planetarios y el tiempo geológico profundo. Esta es una revisión autorizada del Antropoceno, cruzando disciplinas científicas, de ciencias sociales y humanidades.</p1>
         </article>
         <article>
             <h1><strong>The “Anthropocene”</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/earth-system-science-in-the-anthropocene.jpg" alt="Portada: The “Anthropocene”.">
+                </figure>
+            </div>
             <p1>Esta publicación académica por el químico ganador del Premio Nobel, Paul J. Crutzen, dentro del libro “Earth System Science in the Anthropocene” narra el desarrollo de las actividades humanas en el impacto creciente sobre el medio ambiente a todas las escalas, superando en muchos sentidos a los procesos naturales y justifica asignar el término “antropoceno” a la época geológica actual.</p1>
         </article>
         <article>
             <h1><strong>Anthropocene: The Human Epoch</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/anthropocene-the-human-epoch.jpg" alt="Portada: Anthropocene: The Human Epoch.">
+                </figure>
+            </div>
             <p1>En esta meditación cinematográfica sobre la reingeniería masiva del planeta por parte de la humanidad, el equipo de este largometraje documental viaja a seis continentes y veinte países diferentes durante cuatro años mientras siguen la investigación del Grupo de Trabajo del Antropoceno para capturar imágenes asombrosas que relatan el catastrófico camino recorrido por nuestra especie durante el último siglo.</p1>
         </article>
         <article>
             <h1><strong>Enter the Anthropocene — Age of Man</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/enter-the-anthropocene-age-of-man.jpg" alt="Portada: Enter the Anthropocene — Age of Man.">
+                </figure>
+            </div>
             <p1>Este artículo publicado por en el número de marzo de 2011 de la revista National Geographic por la periodista ganadora del Premio Pulitzer, Elizabeth Kolbert, presenta a los lectores el concepto del Antropoceno siguiendo a Jan Zalasiewicz, una estratigrafista británica buscando validarlo como una época geológica. Esta lectura es una gran introducción al concepto así como interesante para los familiarizados con el mismo.</p1>
         </article>
         <article>
             <h1><strong>The Anthropocene Reviewed</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/the-anthropocene-reviewed.jpg" alt="Portada: The Anthropocene Reviewed.">
+                </figure>
+            </div>
+            <p1>En este podcast presentado el escritor y creador de contenido de YouTube John Green califica diferentes facetas del Antropoceno en una escala de cinco estrellas, desde productos completamente artificiales como el Diet Dr. Pepper hasta especies naturales que han visto alterado su destino por la influencia humana como el ganso de Canadá, narrando acontecimientos importantes del Antropoceno en un tono tan amigable y humorístico como introspectivo.</p1>
+        </article>
+        <article>
+            <h1><strong>Anthropocene: A Very Short Introduction | Erle C. Ellis</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/anth" alt="Video: Anthropocene: A Very Short Introduction | Erle C. Ellis.">
+                </figure>
+            </div>
             <p1>En este podcast presentado el escritor y creador de contenido de YouTube John Green califica diferentes facetas del Antropoceno en una escala de cinco estrellas, desde productos completamente artificiales como el Diet Dr. Pepper hasta especies naturales que han visto alterado su destino por la influencia humana como el ganso de Canadá, narrando acontecimientos importantes del Antropoceno en un tono tan amigable y humorístico como introspectivo.</p1>
         </article>
     </section>
 
     <footer>
-        <figure>
-            <img src="imagenes/iconos/" alt="Imágen: Logo.">
-        </figure>
+        <nav>
+            <div class="bot">
+                <div class="logoBoxBot">
+                    <img class="logoBot" src="imagenes/iconos/antropoceno-blanco.png">
+                    <div class="logoText">
+                        <p class="bigText">Antropoceno</p>
+                        <p>La Tierra del Hombre</p>
+                    </div>
+                </div>
+                <div class="redes">
+                    <div>
+                        <p class="botText">Comparte esta página</p>
+                    </div>
+                    <div class="socialIcons">
+                        <img class="botImage" src="imagenes/iconos/facebook-blanco.png">
+
+                        <img class="botImage" src="imagenes/iconos/twitter-blanco.png">
+
+                        <img class="botImage" src="imagenes/iconos/mail-blanco.png">
+
+                        <img class="botImage" src="imagenes/iconos/whatsapp-blanco.png">
+                    </div>
+                </div>
+
+            </div>
+        </nav>
     </footer>
+
 </body>
 
 </html>
