--- a/interna01.html
+++ b/interna01.html
@@ -15,62 +15,147 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="linea-de-tiempo.html" target="_self">Línea de tiempo</a></li>
-                <li><a href="gran-aceleracion.html" target="_self">Gran aceleración</a></li>
-                <li><a href="impactos-humanos.html" target="_self">Impactos humanos</a></li>
-                <li><a href="desarrollo-sostenible.html" target="_self">Dedarrollo sostenible</a></li>
-                <li><a href="recursos-educativos.html" target="_self">Recursos educativos</a></li>
-            </ul>
+            <div class="top">
+                <div class="logoBox">
+                    <img class="logo" src="imagenes/iconos/antropoceno-blanco.png">
+                    <div class="logoText">
+                        <p class="bigText">Antropoceno</p>
+                        <p>La Tierra del Hombre</p>
+                    </div>
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna01.html" target="_self">Línea de tiempo</a>
+                    <img class="topImage" src="imagenes/iconos/linea-de-tiempo-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna02.html" target="_self">Gran aceleración</a>
+                    <img class="topImage" src="imagenes/iconos/gran-aceleracion-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna03.html" target="_self">Impactos humanos</a>
+                    <img class="topImage" src="imagenes/iconos/impactos-humanos-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna04.html" target="_self">Dedarrollo sostenible</a>
+                    <img class="topImage" src="imagenes/iconos/desarrollo-sostenible-blanco.png">
+                </div>
+                <div class="topItem">
+                    <a class="toptitle" href="interna05.html" target="_self">Recursos educativos</a>
+                    <img class="topImage" src="imagenes/iconos/recursos-educativos-blanco.png">
+                </div>
+            </div>
         </nav>
     </header>
 
+
     <section>
-        <article>
-            <h1><strong>Línea de tiempo</strong></h1>
-            <p1>A pesar de que se han propuesto varias fechas de inicio para el Antropoceno, distinguido como un nuevo período geológico ya sea posterior o dentro del Holoceno, su proceso de ratificación aún está en curso, por lo que queda por definitir una fecha. A continuación una cronología de los acontecimientos más importantes acerca del desarrollo de la actividad humana con impactos en el medio ambiente.</p1>
+        <article class="queEs">
+            <div class="articleBox">
+                <h1 class="articleTitle"><strong>Línea de tiempo</strong></h1>
+                <p1 class="articleText">A pesar de que se han propuesto varias fechas de inicio para el Antropoceno, distinguido como un nuevo período geológico ya sea posterior o dentro del Holoceno, su proceso de ratificación aún está en curso, por lo que queda por definitir una fecha. A continuación una cronología de los acontecimientos más importantes acerca del desarrollo de la actividad humana con impactos en el medio ambiente, los cuáles son considerados como posibles inicios para el Antropoceno por la comunidad científica.</p1>
+            </div>
         </article>
     </section>
 
-    <section>
+    <section class="texto">
         <article>
-            <h1><strong>Extinción de megafauna</strong></h1>
+            <h1><strong>Línea de tiempo</strong></h1>
+            <p1>A pesar de que se han propuesto varias fechas de inicio para el Antropoceno, distinguido como un nuevo período geológico ya sea posterior o dentro del Holoceno, su proceso de ratificación aún está en curso, por lo que queda por definitir una fecha. A continuación una cronología de los acontecimientos más importantes acerca del desarrollo de la actividad humana con impactos en el medio ambiente, los cuáles son considerados como posibles inicios para el Antropoceno por la comunidad científica.</p1>
+        </article>
+    </section>
+
+    <section class=texto>
+        <article>
+            <h1>Extinción de megafauna</h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/extincion-de-megafauna.jpg" alt="Ilustración: Extinción de megafauna.">
+                </figure>
+            </div>
             <p1>La desaparición de grandes animales terrestres conocidos como megafauna al final del último período glacial fue la primera vez en que los humanos tuvieron un papel importante en los periodos de extinciones debido a la caza excesiva. Fuera del continente africano, al no evolucionar junto con los humanos, demostró ser muy sensible a la introducción de nuevas depredaciones y muchas especies se extinguieron poco después de la expansión humana.</p1>
         </article>
         <article>
             <h1><strong>Revolución neolítica</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/revolucion-neolitica.jpg" alt="Ilustración: Revolución neolítica.">
+                </figure>
+            </div>
             <p1>La Revolución Neolítica fue la transición a gran escala de muchas culturas humanas durante el período Neolítico de un estilo de vida de caza y recolección a uno de agricultura y asentamiento, haciendo posible una población cada vez mayor. Estas comunidades asentadas permitieron a los humanos observar y experimentar con plantas para aprender cómo crecían y se desarrollaban, lo cual condujo a la domesticación de las plantas.</p1>
         </article>
         <article>
             <h1><strong>Domesticación del ganado</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/domesticacion-del-ganado.jpg" alt="Ilustración: Domesticación del ganado.">
+                </figure>
+            </div>
             <p1>Los animales de presa fueron domesticados progresivamente al principio de la historia de la agricultura, empezando por los cerdos en Mesopotamia alrededor del 13.000 a. C., seguido por las ovejas en el 11.000 y el ganado en Pakistán alrededor del 8.500 a. C., el cuál fue usado como animal de tiro. Desde entonces, el ser humano ha tenido la necesidad de alimento y territorio no solo para sí mismo, sino también para su ganado.</p1>
         </article>
         <article>
             <h1><strong>Primer protociudad</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/primer-protociudad.jpg" alt="Ilustración: Primer protociudad.">
+                </figure>
+            </div>
             <p1>Çatalhöyük fue un asentamiento muy grande en el sur de Anatolia, que existió en el neolítico y calcolítico aproximadamente desde el 7100 a. C. hasta el 5700 a. C., floreciendo 100 años después de su fundación. Es considerado como el sitio neolítico más grande y mejor conservado encontrado hasta la fecha así como la primer protociudad. Se ha estimado que la población del montículo oriental llegó a albergar hasta a 10, 000 personas.</p1>
         </article>
         <article>
             <h1><strong>Revolución industrial</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/revolucion-industrial.jpg" alt="Ilustración: Revolución industrial.">
+                </figure>
+            </div>
             <p1>La Revolución Industrial fue la transición a nuevos procesos de fabricación en Europa y Estados Unidos entre 1760 y 1840 gracias a la combustión a gran escala de carbón, petróleo y gas que permitió el surgimiento del sistema de fábrica mecanizado para la producción de nuevos productos químicos, conduciendo a un aumento sin precedentes en la tasa de crecimiento de la población, en el cuál esta llego por primera vez a mil millones.</p1>
         </article>
         <article>
             <h1><strong>Era atómica</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/era-atomica.jpg" alt="Ilustración: Era atómica.">
+                </figure>
+            </div>
             <p1>La era atómica se considera el comienzo del Antropoceno más aceptado, ya sea la detonación de la primera bomba atómica en 1945 o el Tratado de Prohibición Parcial de Ensayos Nucleares en 1963, cuando la lluvia radioactiva alcanzó un pico en la atmósfera. El material radiactivo de esta y posteriores detonaciones han dejado un rastro inconfundible en la geología de la Tierra y marcó el comienzo de cambios profundos en el pensamiento sociopolítico y el curso del desarrollo tecnológico.</p1>
         </article>
         <article>
             <h1><strong>Gran aceleración</strong></h1>
+            <div>
+                <figure class=ilustraciones>
+                    <img src="imagenes/contenido/gran-aceleracion-2.jpg" alt="Ilustración: Gran aceleración.">
+                </figure>
+            </div>
             <p1>La evidencia científica prueba que los últimos 70 años han sido testigos de la transformación más profunda de la relación humana con el mundo natural en la historia de la humanidad, ya que muchas actividades humanas alcanzaron puntos de despegue en algún momento del siglo XX que continuan acelerándose bruscamente y cuyos efectos son claramente discernibles a nivel de Ciencia del sistema Tierra y amenazan nuestra existencia.</p1>
         </article>
-        <article>
-            <h1><strong>Aprende más</strong></h1>
-        </article>
     </section>
-
     <footer>
-        <figure>
-            <img src="imagenes/iconos/" alt="Imágen: Logo.">
-        </figure>
-    </footer>
-</body>
+        <nav>
+            <div class="bot">
+                <div class="logoBoxBot">
+                    <img class="logoBot" src="imagenes/iconos/antropoceno-blanco.png">
+                    <div class="logoText">
+                        <p class="bigText">Antropoceno</p>
+                        <p>La Tierra del Hombre</p>
+                    </div>
+                </div>
+                <div class="redes">
+                    <div>
+                        <p class="botText">Comparte esta página</p>
+                    </div>
+                    <div class="socialIcons">
+                        <img class="botImage" src="imagenes/iconos/facebook-blanco.png">
 
-</html>
+                        <img class="botImage" src="imagenes/iconos/twitter-blanco.png">
+
+                        <img class="botImage" src="imagenes/iconos/mail-blanco.png">
+
+                        <img class="botImage" src="imagenes/iconos/whatsapp-blanco.png">
+                    </div>
+                </div>
+
+            </div>
+        </nav>
+    </footer>
+
+</body></html>
