Finished Timeline page

--- a/interna01.html
+++ b/interna01.html
@@ -67,96 +67,128 @@
     <section class=texto>
         <article>
             <h1 class="articleSubtitle">Extinción de megafauna</h1>
-            <div>
+            <div class="articleBody">
                 <figure class=ilustraciones>
-                    <img src="imagenes/contenido/extincion-de-megafauna.jpg" alt="Ilustración: Extinción de megafauna.">
+                    <img class="articleImage" src="imagenes/contenido/extincion-de-megafauna.jpg"
+                        alt="Ilustración: Extinción de megafauna.">
                 </figure>
+
+                <p1 class="subarticleText">La desaparición de grandes animales terrestres conocidos como megafauna al
+                    final del último período
+                    glacial fue la primera vez en que los humanos tuvieron un papel importante en los periodos de
+                    extinciones debido a la caza excesiva. Fuera del continente africano, al no evolucionar junto con
+                    los
+                    humanos, demostró ser muy sensible a la introducción de nuevas depredaciones y muchas especies se
+                    extinguieron poco después de la expansión humana.</p1>
             </div>
-            <p1>La desaparición de grandes animales terrestres conocidos como megafauna al final del último período
-                glacial fue la primera vez en que los humanos tuvieron un papel importante en los periodos de
-                extinciones debido a la caza excesiva. Fuera del continente africano, al no evolucionar junto con los
-                humanos, demostró ser muy sensible a la introducción de nuevas depredaciones y muchas especies se
-                extinguieron poco después de la expansión humana.</p1>
         </article>
         <article>
             <h1 class="articleSubtitle"><strong>Revolución neolítica</strong></h1>
-            <div>
+            <div class="articleBody">
                 <figure class=ilustraciones>
-                    <img src="imagenes/contenido/revolucion-neolitica.jpg" alt="Ilustración: Revolución neolítica.">
+                    <img class="articleImage" src="imagenes/contenido/revolucion-neolitica.jpg"
+                        alt="Ilustración: Revolución neolítica.">
                 </figure>
+
+                <p1 class="subarticleText">La Revolución Neolítica fue la transición a gran escala de muchas culturas
+                    humanas durante el
+                    período
+                    Neolítico de un estilo de vida de caza y recolección a uno de agricultura y asentamiento, haciendo
+                    posible una población cada vez mayor. Estas comunidades asentadas permitieron a los humanos observar
+                    y
+                    experimentar con plantas para aprender cómo crecían y se desarrollaban, lo cual condujo a la
+                    domesticación de las plantas.</p1>
             </div>
-            <p1>La Revolución Neolítica fue la transición a gran escala de muchas culturas humanas durante el período
-                Neolítico de un estilo de vida de caza y recolección a uno de agricultura y asentamiento, haciendo
-                posible una población cada vez mayor. Estas comunidades asentadas permitieron a los humanos observar y
-                experimentar con plantas para aprender cómo crecían y se desarrollaban, lo cual condujo a la
-                domesticación de las plantas.</p1>
         </article>
         <article>
             <h1 class="articleSubtitle"><strong>Domesticación del ganado</strong></h1>
-            <div>
+            <div class="articleBody">
                 <figure class=ilustraciones>
-                    <img src="imagenes/contenido/domesticacion-del-ganado.jpg"
+                    <img class="articleImage" src="imagenes/contenido/domesticacion-del-ganado.jpg"
                         alt="Ilustración: Domesticación del ganado.">
                 </figure>
+
+                <p1 class="subarticleText">Los animales de presa fueron domesticados progresivamente al principio de la
+                    historia de la
+                    agricultura,
+                    empezando por los cerdos en Mesopotamia alrededor del 13.000 a. C., seguido por las ovejas en el
+                    11.000
+                    y el ganado en Pakistán alrededor del 8.500 a. C., el cuál fue usado como animal de tiro. Desde
+                    entonces, el ser humano ha tenido la necesidad de alimento y territorio no solo para sí mismo, sino
+                    también para su ganado.</p1>
             </div>
-            <p1>Los animales de presa fueron domesticados progresivamente al principio de la historia de la agricultura,
-                empezando por los cerdos en Mesopotamia alrededor del 13.000 a. C., seguido por las ovejas en el 11.000
-                y el ganado en Pakistán alrededor del 8.500 a. C., el cuál fue usado como animal de tiro. Desde
-                entonces, el ser humano ha tenido la necesidad de alimento y territorio no solo para sí mismo, sino
-                también para su ganado.</p1>
         </article>
         <article>
             <h1 class="articleSubtitle"><strong>Primer protociudad</strong></h1>
-            <div>
+            <div class="articleBody">
                 <figure class=ilustraciones>
-                    <img src="imagenes/contenido/primer-protociudad.jpg" alt="Ilustración: Primer protociudad.">
+                    <img class="articleImage" src="imagenes/contenido/primer-protociudad.jpg"
+                        alt="Ilustración: Primer protociudad.">
                 </figure>
+
+                <p1 class="subarticleText">Çatalhöyük fue un asentamiento muy grande en el sur de Anatolia, que existió
+                    en el neolítico y
+                    calcolítico aproximadamente desde el 7100 a. C. hasta el 5700 a. C., floreciendo 100 años después de
+                    su
+                    fundación. Es considerado como el sitio neolítico más grande y mejor conservado encontrado hasta la
+                    fecha así como la primer protociudad. Se ha estimado que la población del montículo oriental llegó a
+                    albergar hasta a 10, 000 personas.</p1>
             </div>
-            <p1>Çatalhöyük fue un asentamiento muy grande en el sur de Anatolia, que existió en el neolítico y
-                calcolítico aproximadamente desde el 7100 a. C. hasta el 5700 a. C., floreciendo 100 años después de su
-                fundación. Es considerado como el sitio neolítico más grande y mejor conservado encontrado hasta la
-                fecha así como la primer protociudad. Se ha estimado que la población del montículo oriental llegó a
-                albergar hasta a 10, 000 personas.</p1>
         </article>
         <article>
             <h1 class="articleSubtitle"><strong>Revolución industrial</strong></h1>
-            <div>
+            <div class="articleBody">
                 <figure class=ilustraciones>
-                    <img src="imagenes/contenido/revolucion-industrial.jpg" alt="Ilustración: Revolución industrial.">
+                    <img class="articleImage" src="imagenes/contenido/revolucion-industrial.jpg"
+                        alt="Ilustración: Revolución industrial.">
                 </figure>
+
+                <p1 class="subarticleText">La Revolución Industrial fue la transición a nuevos procesos de fabricación
+                    en Europa y Estados
+                    Unidos
+                    entre 1760 y 1840 gracias a la combustión a gran escala de carbón, petróleo y gas que permitió el
+                    surgimiento del sistema de fábrica mecanizado para la producción de nuevos productos químicos,
+                    conduciendo a un aumento sin precedentes en la tasa de crecimiento de la población, en el cuál esta
+                    llego por primera vez a mil millones.</p1>
             </div>
-            <p1>La Revolución Industrial fue la transición a nuevos procesos de fabricación en Europa y Estados Unidos
-                entre 1760 y 1840 gracias a la combustión a gran escala de carbón, petróleo y gas que permitió el
-                surgimiento del sistema de fábrica mecanizado para la producción de nuevos productos químicos,
-                conduciendo a un aumento sin precedentes en la tasa de crecimiento de la población, en el cuál esta
-                llego por primera vez a mil millones.</p1>
         </article>
         <article>
             <h1 class="articleSubtitle"><strong>Era atómica</strong></h1>
-            <div>
+            <div class="articleBody">
                 <figure class=ilustraciones>
-                    <img src="imagenes/contenido/era-atomica.jpg" alt="Ilustración: Era atómica.">
+                    <img class="articleImage" src="imagenes/contenido/era-atomica.jpg" alt="Ilustración: Era atómica.">
                 </figure>
+
+                <p1 class="subarticleText">La era atómica se considera el comienzo del Antropoceno más aceptado, ya sea
+                    la detonación de la
+                    primera
+                    bomba atómica en 1945 o el Tratado de Prohibición Parcial de Ensayos Nucleares en 1963, cuando la
+                    lluvia
+                    radioactiva alcanzó un pico en la atmósfera. El material radiactivo de esta y posteriores
+                    detonaciones
+                    han dejado un rastro inconfundible en la geología de la Tierra y marcó el comienzo de cambios
+                    profundos
+                    en el pensamiento sociopolítico y el curso del desarrollo tecnológico.</p1>
             </div>
-            <p1>La era atómica se considera el comienzo del Antropoceno más aceptado, ya sea la detonación de la primera
-                bomba atómica en 1945 o el Tratado de Prohibición Parcial de Ensayos Nucleares en 1963, cuando la lluvia
-                radioactiva alcanzó un pico en la atmósfera. El material radiactivo de esta y posteriores detonaciones
-                han dejado un rastro inconfundible en la geología de la Tierra y marcó el comienzo de cambios profundos
-                en el pensamiento sociopolítico y el curso del desarrollo tecnológico.</p1>
         </article>
         <article>
             <h1 class="articleSubtitle"><strong>Gran aceleración</strong></h1>
-            <div>
+            <div class="articleBody">
                 <figure class=ilustraciones>
-                    <img src="imagenes/contenido/gran-aceleracion-2.jpg" alt="Ilustración: Gran aceleración.">
+                    <img class="articleImage" src="imagenes/contenido/gran-aceleracion-2.jpg"
+                        alt="Ilustración: Gran aceleración.">
                 </figure>
+
+                <p1 class="subarticleText">La evidencia científica prueba que los últimos 70 años han sido testigos de
+                    la transformación más
+                    profunda de la relación humana con el mundo natural en la historia de la humanidad, ya que muchas
+                    actividades humanas alcanzaron puntos de despegue en algún momento del siglo XX que continuan
+                    acelerándose bruscamente y cuyos efectos son claramente discernibles a nivel de Ciencia del sistema
+                    Tierra y amenazan nuestra existencia.</p1>
             </div>
-            <p1>La evidencia científica prueba que los últimos 70 años han sido testigos de la transformación más
-                profunda de la relación humana con el mundo natural en la historia de la humanidad, ya que muchas
-                actividades humanas alcanzaron puntos de despegue en algún momento del siglo XX que continuan
-                acelerándose bruscamente y cuyos efectos son claramente discernibles a nivel de Ciencia del sistema
-                Tierra y amenazan nuestra existencia.</p1>
         </article>
+        <button type="button" class="botonBot">Aprende más</button>
+
     </section>
     <footer>
         <nav>
